# djangobank

./: .dockerignore  .env.local  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/: pyproject.toml
backend/conf/: celery.py  roles.py  routers.py  settings.py  urls.py
backend/nezbank/: admin.py  authutils.py  filters.py  forms.py  services.py  signals.py  tests.py
backend/nezbank/management/commands/: check_currency.py
backend/nezbank/migrations/: 0002_auto_20211228_1743.py  0003_auto_20211231_1638.py
backend/templates/email/: reset-password-done.html
conf/: celery.py  routers.py  settings.py  urls.py
nextjs/: env.js  package-lock.json  package.json
nextjs/api/: accounts.js  auth.js  index.js
nextjs/components/: Footer.js  Layout.js  Navbar.js
nextjs/pages/: 404.js  _app.js  accounts.js  index.js  login.js
nextjs/styles/: globals.scss
nezbank/: __init__.py  admin.py  apps.py  authutils.py  filters.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
nezbank/migrations/: 0001_initial.py  0002_user_patronymic_name.py  0003_auto_20211219_1501.py  0003_auto_20211231_1638.py  0004_verifycode.py
templates/email/: base.html  reset-password.html
templates/registration/: email_verification.html  email_verification.txt  password_reset_email.html
